apps/bjj/dev/networking/routes/httproute-grafana-dev.yaml
# HTTPRoute pentru accesul la Grafana în mediul dev
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-grafana-dev
  namespace: bjj
spec:
  parentRefs:
  - name: dev-gateway-bjjbackend-dev-api
    sectionName: https
  hostnames:
  - grafana-dev.cardano.vip
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      namespace: monitoring
      port: 80
